# PitDB

./: .gitignore  ARCHITECTURE.md  All_Commands.md  METHODOLOGY.md  Makefile  README.md  benchmarks_consolidated_session_2.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: bench_bitemporal.py  bench_chunk_granularity.py  bench_memory.py  bench_query.py  bench_scale.py  config.py  report.py  run_all.py  run_suite.py  stats.py  synthetic_data.py
benchmarks/reporting/: console.py  environment.py  validation.py
charts/: chart_bitemporal.py  chart_chunk_granularity.py  chart_chunks_skipped.py  chart_latency_bar.py  chart_memory.py  chart_scale_sweep.py  chart_speedup_vs_selectivity.py  generate_all.py
data/: README.md  download_data.py
data/cache/: all_symbols_1m.csv  all_symbols_daily.csv
docs/: architecture.md  methodology.md
src/: pipeline.py
src/baselines/: full_scan.py
src/query/: executor.py  predicate.py  pushdown.py  schema.py  sql_parser.py  versioning.py
src/replay/: data_loader.py  replay_harness.py
src/store/: chunk.py  chunk_boundary.py  chunk_builder.py  chunk_store.py  label.py
tests/: test_as_of_index.py  test_benchmarks_reporting.py  test_bitemporal.py  test_chunk_store.py  test_compaction.py  test_data_loader.py  test_edge_cases.py  test_end_to_end.py  test_executor.py  test_pushdown.py  test_replay.py  test_sql_parser.py
